# ba

./: .gitignore  BAConfig.cmake.in  CMakeLists.txt  README.md  baConfig.cmake.in
exe/: CMakeLists.txt
exe/src/: main.c
lib/: CMakeLists.txt  config.h.in
lib/include/ba/: archive.h  ba.h  ba.hpp  buffer.h  buffer.hpp  exports.h  reader.h  reader.hpp  source.h  writer.h  writer.hpp
lib/src/: archive.c  ba.c  buffer.c  hash.c  hash.h  headers.h  reader.c  signature.h  source.c  tree.c  tree.h  writer.c
